--- a/main_window.ui
+++ b/main_window.ui
@@ -571,6 +571,29 @@
      </property>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>300</y>
+      <width>691</width>
+      <height>231</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>조건검색종목</string>
+    </property>
+    <widget class="QTableWidget" name="conditionItemTableWidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>671</width>
+       <height>201</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
